# NodeGraphEditor

./: .gitignore  README.md  actions.py  app.py  button.py  button_component.py  canvas_panning.py  component_registry.py  conftest.py  connection.py  connection_drag_state.py  connection_list.py  constants.py  editor.py  editor_context.py  fps_counter.py  fps_counter_component.py  graph_persistence.py  main.py  node.py  node_area_component.py  pyproject.toml  renderer.py  selection.py  settings.py  test_button.py  test_editor.py  text_input_component.py  textinput.py  toolbar.py  toolbar_component.py  uicomponent.py  undo.py
.github/workflows/: build_windows.yml
tests/: test_app.py  test_button.py  test_button_component_actions.py  test_component_registry.py  test_editor.py  test_editor_context.py  test_node_area_component.py  test_toolbar.py
