[project]
name = "nodegrapheditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pygame-ce>2.5.4",
  "pyinstaller",
  "networkx>=3.5",
  "pytest",
  "ruff>=0.12.0"
]

[tool.ruff]
# Configuration for the Ruff Linter
# You can enable/disable rules, define ignore lists, etc.
# A simple configuration would look like this:
lint.select = ["E", "W", "F"] # Enable Error, Warning and PyFlakes rules
lint.ignore = []
line-length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
log_cli = true
log_cli_level = "INFO"